--- a/cloudiness.html
+++ b/cloudiness.html
@@ -61,7 +61,7 @@
      <div class="col-md-1"></div>  
 	   <div class="col-md-6">
       <h1>Cloudiness</h1>
-	    <img src="Images/Cloudiness.png">
+	    <img src="Images/Cloudiness.png" class="centerimage">
 	    <p>There was no correlation between latitude and cloudiness.</p>
      </div>    
 	   <div class="col-md-4 sidebar">
