--- a/humidity.html
+++ b/humidity.html
@@ -60,7 +60,7 @@
      <div class="col-md-1"></div>  
 	   <div class="col-md-6">
       <h1>Humidity</h1>
-	    <img src="Images/Humidity.png">
+	    <img src="Images/Humidity.png" class="centerimage">
 	    <p>We were surprised that the correlation between latitude and humidity was relatively weak.</p>
      </div>    
 	   <div class="col-md-4 sidebar">
