--- a/max_temperature.html
+++ b/max_temperature.html
@@ -60,7 +60,7 @@
      <div class="col-md-1"></div>  
 	   <div class="col-md-6">
       <h1>Max Temperature</h1>
-	    <img src="Images/Temperature.png">
+	    <img src="Images/Temperature.png" class="centerimage">
 	    <p>There is a negative correlation between latitude and temperature. This graph shows as expected that cities that are closer to the equator trend warmer than cities that are further from the equator. In addition, cities that located in the southern hemisphere trend warmer than cities in the northern hemisphere.</p>
       <p>It is important to note that our data set is weigh heavily toward cities in the northern hemisphere. We think this is because the CitiPy Python Library may include more cities in the northern hemisphere than cities in the southern hemisphere.</p>
      </div>    
