--- a/wind_speed.html
+++ b/wind_speed.html
@@ -62,7 +62,7 @@
      <div class="col-md-1"></div>  
 	   <div class="col-md-6">
       <h1>Wind Speed</h1>
-	    <img src="Images/Wind_Speed.png">
+	    <img src="Images/Wind_Speed.png" class="centerimage">
 	    <p>The correlation between latitude and wind speed was show to be very weak in our visualization.</p>
      </div>    
 	   <div class="col-md-4 sidebar">
@@ -79,7 +79,7 @@
           <div class="col-md-3"></div>
         
           <div class="col-md-3">  
-	           <a href="humiditiy.html">Humidity<img src="Images/Humidity.png" width="200px" height="150px"></a>
+	           <a href="humidity.html">Humidity<img src="Images/Humidity.png" width="200px" height="150px"></a>
           </div>
           <div class="col-md-3"></div>  
        </div>   
